fix slider, add break in partners

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -672,23 +672,27 @@
       display: flex;
     }
   }
-
+  
   &__section-description {
     padding: 1em 2em;
     @media screen and (min-width: 768px) {
-      flex-basis: 38%;
-      max-width: 38%;
+      flex-basis: 30%;
+      max-width: 30%;
       order: -1;
+    }
+    div {
+      font-size: 14px;
     }
   }
 
   &__section-photo {
     background-size: cover;
-    padding-bottom: 62%;
+    padding-bottom: 70%;
+    background-position: center center;
     @media screen and (min-width: 768px) {
-      padding-bottom: 38%;
-      flex-basis: 62%;
-      max-width: 62%;
+      padding-bottom: 30%;
+      flex-basis: 70%;
+      max-width: 70%;
     }
   }
 }
@@ -698,9 +702,28 @@
   &__list {
     max-width: 1024px;
     margin: auto;
+    display: flex;
+    flex-flow: row wrap;
+    align-content: space-between;
+    justify-content: space-between;
+    &--info {
+      &::before, &::after {
+        content: "";
+        width: 100%;
+        order: 1;
+      }
+    }
   }
   &__link {
-    display: inline-block;
+    display: flex;
+    &--info {
+      &:nth-child(n + 7) {
+        order: 1;
+      }
+      &:nth-child(n + 14) {
+        order: 2;
+      }
+    }
   }
   &__logo {
     display: block;
@@ -765,6 +788,12 @@
 .swiper-pagination-contrast {
   .swiper-pagination-bullet {
     background: $color--contrast;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .swiper-container {
+    min-height: 600px;
   }
 }
 
